feat(api): Introduce section creation endpoint
