# api/src/shops/router.ts
@@ -5,6 +5,7 @@ import { createController, createAuthController } from "../shared/controller";
 import * as menuControllerParams from "./controllers/menu";
 import * as listControllerParams from "./controllers/list";
 import * as createControllerParams from "./controllers/create";
+import * as createSectionControllerParams from "./controllers/createSection";
 
 import { loadShop } from "./helpers/loadShop";
 
@@ -16,3 +17,5 @@ router.get("/shops/:shop_id/menu", createController(menuControllerParams));
 router.get("/shops", createAuthController(listControllerParams));
 router.post("/shops", createAuthController(createControllerParams));
 router.get("/shops/:shop_id", createAuthController(listControllerParams));
+
+router.post("/sections", createAuthController(createSectionControllerParams));
